	ptob->flush (object);

although to actually avoid resetting the buffers and discard unread
chars requires further hacking that depends on the characteristics
of the ptob.

** The scm_sysmissing procedure is no longer used in libguile.
Unless it turns out to be unexpectedly useful to somebody, it will be
removed in a future version.

* Changes to system call interfaces:

** If a facility is not available on the system when Guile is
compiled, the corresponding primitive procedure will not be defined.
Previously it would have been defined but would throw a system-error
exception if called.  Exception handlers which catch this case may
need minor modification: an error will be thrown with key
'unbound-variable instead of 'system-error.  Alternatively it's
now possible to use `defined?' to check whether the facility is
available.

** Procedures which depend on the timezone should now give the correct
result on systems which cache the TZ environment variable, even if TZ 
is changed without calling tzset.

* Changes to the networking interfaces:

** New functions: htons, ntohs, htonl, ntohl: for converting short and
long integers between network and host format.  For now, it's not
particularly convenient to do this kind of thing, but consider:

(define write-network-long
  (lambda (value port)
    (let ((v (make-uniform-vector 1 1 0)))
      (uniform-vector-set! v 0 (htonl value))
      (uniform-vector-write v port))))

(define read-network-long
  (lambda (port)
    (let ((v (make-uniform-vector 1 1 0)))
      (uniform-vector-read! v port)
      (ntohl (uniform-vector-ref v 0)))))

** If inet-aton fails, it now throws an error with key 'misc-error
instead of 'system-error, since errno is not relevant.

** Certain gethostbyname/gethostbyaddr failures now throw errors with
specific keys instead of 'system-error.  The latter is inappropriate
since errno will not have been set.  The keys are:
'host-not-found, 'try-again, 'no-recovery and 'no-data.
