@@ -1,3 +1,9 @@
+2000-01-29  Gary Houston  <ghouston@arglist.com>
+
+	* expect.scm (expect): don't call char-ready? before expect-select,
+	since select now checks port buffers itself.  don't bother to check
+	the time first either, since expect-select does it.
+
 Thu Jan 20 12:57:36 2000  Greg J. Badros  <gjb@cs.washington.edu>
 
 	* format.scm: Use (variable-set! (builtin-variable 'format)) to
